<package>
 <name>controllers_launch</name>
  <version>0.1.0</version>
  <description>
    Launch files for RAS lab1.
  </description>
  <license>BSD</license>

  <maintainer email="grobgeld@kth.se">Alex Hermansson</maintainer>

  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>ras_lab1_distance_sensor</run_depend>
  <run_depend>ras_lab1_motors</run_depend>
  <run_depend>ras_lab1_world</run_depend>

</package>
